# simcrowd

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
data/: download_census.py
data/census/: sample.jsonl  sample_marginals.json
data/concepts/: devtools.json  fintech.json  fintech_concept.json  fintech_interview.json  fintech_survey.json  mealkit.json
data/pew/: README.md  consumer_attitudes_topline.csv  sample_scorecard.json  tech_adoption_topline.csv
deploy/db/: init.sql
deploy/docker/: Dockerfile.api
docs/: decisions.md  progress.md
evals/: judge_prompts.py  run_evals.py
src/simcrowd/: __init__.py  models.py  settings.py
src/simcrowd/api/: main.py
src/simcrowd/graph/: build.py  state.py
src/simcrowd/llm/: router.py
src/simcrowd/panel/: cli.py  persona_writer.py  sampler.py
src/simcrowd/research/: cli.py  compiler.py  interviewer.py  runner.py  validator.py
src/simcrowd/synthesis/: insights.py  pricing.py  report.py  segmenter.py  verifier.py
src/simcrowd/validation/: pew_bench.py
tests/: test_api_concepts.py  test_pew.py  test_pricing.py  test_sampler.py  test_scorecard_api.py  test_scorecard_csv.py  test_survey.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/app/: page.tsx
web/app/evals/: page.tsx
web/components/: navbar.tsx
web/lib/: api.ts  demo-data.ts  motion.ts
web/public/evals/: latest.json
