[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simcrowd"
version = "0.1.0"
description = "Synthetic user research platform with reality validation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "H3Xobit" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "psycopg[binary]>=3.2.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scipy>=1.14.0",
  "scikit-learn>=1.5.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "orjson>=3.10.0",
  "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.8.0"]
llm = ["anthropic>=0.39.0", "groq>=0.11.0", "langgraph>=0.2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/simcrowd"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
